# RankAAE

./: README.md  pyproject.toml
example/: fix_config.yaml  run_rankaae_locally.sh  run_rankaae_on_IC.sh
rankaae/analysis/: analysis.py  analysis_new.py
rankaae/cmd/: generate_report.py  train.py
rankaae/models/: dataloader.py  model.py  trainer.py  transformer.py
rankaae/report/: generate_report.py
rankaae/struct-descriptors/: README.md  requirements.txt
rankaae/struct-descriptors/descriptors/: core.py  utils.py
rankaae/struct-descriptors/examples/: POSCAR
rankaae/struct_descriptors/bond_valence_parameters/: README.md  bvparm2016.cif
rankaae/struct_descriptors/descriptors/: core.py  functions.py
rankaae/tests/: test_generate_report.py  test_parameters.py
rankaae/utils/: descriptors.py  functions.py  parameter.py
